<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contato"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="akiba.com.br.atmempresaconsultoria.ContatoActivity">

    <TextView
        android:text="Contato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView6"
        android:layout_toRightOf="@+id/imageView6"
        android:layout_toEndOf="@+id/imageView6"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:id="@+id/textView11"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/detalhe_contato"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:id="@+id/imageView6"
        android:background="@drawable/detalhe_contato"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:text="@string/texto_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView6"
        android:layout_alignLeft="@+id/imageView6"
        android:layout_alignStart="@+id/imageView6"
        android:layout_marginTop="30dp"
        android:id="@+id/textView12"
        android:textSize="18sp" />

    <TextView
        android:text="@string/texto_telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12"
        android:id="@+id/textView13"
        android:textSize="18sp" />

    <TextView
        android:text="@string/texto_celular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:textSize="18sp"
        android:layout_below="@+id/textView13"
        android:layout_alignLeft="@+id/textView13"
        android:layout_alignStart="@+id/textView13" />
</RelativeLayout>
